Closed Bug 1887539 Opened 2 months ago Closed 2 months ago

PiP playback position marker is no longer aligned with the seekbar when it changes

Categories

(Toolkit :: Picture-in-Picture, defect, P1)

Firefox 126
defect

Tracking

()

VERIFIED FIXED
126 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox124 --- unaffected
firefox125 --- unaffected
firefox126 --- verified

People

(Reporter: ke5trel, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

STR:

  1. Open a video in Picture-in-Picture.
  2. Play the video and hover the cursor over the seekbar.

When the playback position changes, the position indicator appears below and offset from the seekbar. Hovering the cursor over it causes it to return.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5f7f5ec23e290e6779f19be5fba47d6346786ec4&tochange=61155e32696f550e553547eaba42879fcc2f3216

Regressed by Bug 1740580.

:emilio, since you are the author of the regressor, bug 1740580, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

No behavior change, just a drive-by clean-up.

The position: relative stuff does nothing, because of this:

Assignee: nobody → emilio
Status: NEW → ASSIGNED

In bug 1740580 I updated these functions to take the content size, but
forgot to update two existing callers.

Assigning P1 since Emilio is actively working on patches for this defect. Thanks for the fast work btw!

Severity: -- → S3
Priority: -- → P1
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/39b4d6cfac5e
Simplify PiP scrubber css rules. r=pip-reviewers,niklas
https://hg.mozilla.org/integration/autoland/rev/303bd35a1f94
Fix nsRangeFrame::UpdateForValueChange after bug 1740580. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
Flags: qe-verify+

I was able to replicate the issue on an affected Firefox Nightly build from 2024-03-24, using macOS 12.6.6, while following the steps described in Comment 0.
Verified as fixed on Firefox Beta 126.0b8, build ID 20240501022718, using macOS 12.6.6, Windows 11 and Ubuntu 22.04.
PiP playback position indicator is aligned with the seekbar when it changes. Hovering the cursor over does not cause any issues.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: