Bug 1887539 - Fix nsRangeFrame::UpdateForValueChange after bug 1740580. r=dholbert

In bug 1740580 I updated these functions to take the content size, but
forgot to update two existing callers.

Differential Revision: https://phabricator.services.mozilla.com/D205549